# kindafax

./: .gitignore  README.md
.github/: FUNDING.yml
client/: README.md  __init__.py  __main__.py  discord.py  pyproject.toml
client/cli/: auth.py
client/pipe/: __init__.py  auth.py  types.py
common/: README.md  config.py  log.py  pyproject.toml
