[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kindafax-common"
description = "Common libary for Kindafax"
dynamic = ["version"]
requires-python = ">= 3.11"
readme = "README.md"
license = "GPL-3.0"
authors = [
    {name = "itsdanjc", email = "dan@itsdanjc.com"},
]
dependencies = [
    "platformdirs"
]

[tool.setuptools]
package-dir = {"common" = "."}
packages = ["common"]
